[tool.poetry]
name = "restwithgps"
version = "0.1.0"
description = ""
authors = ["HIRANO Yoshitaka <yo@hirano.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
fitparse = "^1.2.0"
folium = "^0.14.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mypy = "^0.812"
flake8 = "^3.9.1"
autopep8 = "^1.5.6"
# boto3 = "^1.17.57"
# boto3-stubs = {extras = ["sts", "iam"], version = "^1.17.72"}
icecream = "^2.1.0"

[tool.poetry.scripts]
restwithgps = 'restwithgps.cli_restwithgps:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
